--- a/packages/notebook/src/browser/style/index.css
+++ b/packages/notebook/src/browser/style/index.css
@@ -164,7 +164,7 @@
 }
 
 .theia-notebook-cell-output-webview {
-    padding: '5px 0px';
-    margin: '0px 10px';
+    padding: 5px 0px;
+    margin: 0px 10px;
     width: 100%;
 }
