--- a/packages/keymaps/src/browser/style/index.css
+++ b/packages/keymaps/src/browser/style/index.css
@@ -23,6 +23,7 @@
 #kb-table-container {
   flex: 1;
   overflow: auto;
+  user-select: none;
 }
 
 .fuzzy-match {
@@ -103,10 +104,17 @@
 }
 
 .kb table tbody tr:hover {
-  background-color: var(--theia-list-focusBackground);
+  background-color: var(--theia-list-hoverBackground);
+  color: var(--theia-list-hoverForeground);
 }
 
-.kb table tbody tr:hover .kb-action-item {
+.kb table tbody tr.theia-mod-selected {
+  background-color: var(--theia-list-inactiveSelectionBackground);
+  color: var(--theia-list-inactiveSelectionForeground);
+}
+
+.kb table tbody tr:hover .kb-action-item,
+.kb table tbody tr.theia-mod-selected .kb-action-item {
   visibility: visible;
   color: var(--theia-icon-foreground);
   text-decoration: none;
