getting-started: add welcome page checkbox preference (#12750)
The pull-request includes a preference and checkbox to toggle the visibility of the welcome-page on startup.

Signed-off-by: Vlad Arama <vlad.arama@ericsson.com>

--- a/packages/getting-started/src/browser/style/index.css
+++ b/packages/getting-started/src/browser/style/index.css
@@ -89,3 +89,18 @@ body {
   text-transform: capitalize;
   font-weight: 400;
 }
+
+.gs-preference-container {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  justify-content: center;
+}
+
+.gs-preference {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
