tabbar: support icon-less items
VS Code renders action buttons in the tab bar
for commands that do not have icons using
their title text, instead. This commit does the
same in Theia.

Additionally, two related minor issues are fixed:

- the $(icon) specifiers for icons show in the
  tooltip of an action, which is confusing
- the roll-over highlight shows only on action
  buttons for commands that use the "icon"
  property, not those that embed icon specifiers
  in their titles

Fixes #12686

Signed-off-by: Christian W. Damus <cdamus.ext@eclipsesource.com>

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -480,6 +480,11 @@
   line-height: 18px;
 }
 
+.p-TabBar-toolbar .item > div.no-icon {
+  /* Make room for a text label instead of an icon. */
+  width: 100%;
+}
+
 .p-TabBar-toolbar .item .collapse-all {
   background: var(--theia-icon-collapse-all) no-repeat;
 }
