added drag and drop moving of cells
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/src/browser/style/index.css
+++ b/packages/notebook/src/browser/style/index.css
@@ -224,6 +224,8 @@
     width: 100%;
 }
 
-/* .theia-notebook-code-cell-execution-count {
-
-} */
+.theia-notebook-cell-drop-indicator {
+    height: 2px;
+    background-color: var(--theia-notebook-focusedCellBorder);
+    width: 100%;
+}
