--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -36,11 +36,12 @@
 }
 
 .t-siw-search-container .theia-input {
+  box-sizing: border-box;
   flex: 1;
   line-height: var(--theia-content-line-height);
-  max-height: calc(7 * var(--theia-content-line-height));
+  max-height: calc(2 * 3px + 7 * var(--theia-content-line-height));
   min-width: 16px;
-  padding: 3px 0 0 4px;
+  padding: 3px 0 3px 4px;
   resize: none;
   width: 100%;
 }
@@ -349,6 +350,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
 }
 
 .replace-field {
