Set --theia-ui-font-family by OS
Signed-off-by: Christian Radke <c.radke@posteo.de>

--- a/packages/core/src/browser/style/index.css
+++ b/packages/core/src/browser/style/index.css
@@ -322,6 +322,7 @@ button.secondary[disabled],
 | Import children style files
 |----------------------------------------------------------------------------*/
 
+@import "./os.css";
 @import "./dockpanel.css";
 @import "./dialog.css";
 @import "./menus.css";
