vsx-registry:add checkmark for verified publishers
This commit handles the contribution of the 'verified' field when
searching for extensions in the vsx-registry. It implements a checkmark
near the publisher name when the extension's publisher is verified.

Signed-off-by: Vlad Arama <vlad.arama@ericsson.com>

--- a/packages/vsx-registry/src/browser/style/index.css
+++ b/packages/vsx-registry/src/browser/style/index.css
@@ -136,6 +136,10 @@
   white-space: nowrap;
 }
 
+.theia-vsx-extension-publisher-container {
+  display: flex;
+}
+
 .theia-vsx-extension-action-bar .action {
   font-size: 90%;
   min-width: auto !important;
