implement vsx extensions filtering preference
This commit does the following:
- Adds `extensions.onlyShowVerifiedExtensions` preference to control
  default behavior of the vsx-registry.
- Changes the `verified` icon to `codicon-verified-filled` and registers
  a blue color to match vscode styling.
- Adds a `ConfirmDialog` when trying to install an unverified extension

Signed-off-by: Vlad Arama <vlad.arama@ericsson.com>

--- a/packages/vsx-registry/src/browser/style/index.css
+++ b/packages/vsx-registry/src/browser/style/index.css
@@ -190,6 +190,11 @@
   white-space: nowrap;
 }
 
+.theia-vsx-extension-action-bar .codicon-verified-filled {
+  color: var(--theia-extensionIcon-verifiedForeground);
+  margin-right: 2px;
+}
+
 .theia-vsx-extension-publisher-container {
   display: flex;
 }
