Show decorations in the editor tabs (#13301)

--- a/packages/core/src/browser/style/tabs.css
+++ b/packages/core/src/browser/style/tabs.css
@@ -123,6 +123,12 @@
   white-space: nowrap;
 }
 
+.p-TabBar-tail {
+  padding-left: 5px;
+  text-align: center;
+  justify-content: center;
+}
+
 .p-TabBar.theia-app-centers .p-TabBar-tabLabelWrapper {
   display: flex;
 }
