basic port/address validation
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/remote/src/electron-browser/port-forwarding/port-forwarding-widget.css
+++ b/packages/remote/src/electron-browser/port-forwarding/port-forwarding-widget.css
@@ -22,3 +22,7 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+.port-edit-input-error {
+  outline-color: var(--theia-inputValidation-errorBorder);
+}
