added execution order display to code cells
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/src/browser/style/index.css
+++ b/packages/notebook/src/browser/style/index.css
@@ -129,11 +129,28 @@
   background-color: var(--theia-editor-background);
 }
 
-.theia-notebook-cell-sidebar {
+.theia-notebook-cell-sidebar-toolbar {
   display: flex;
   flex-direction: column;
   padding: 2px;
   background-color: var(--theia-editor-background);
+  flex-grow: 1;
+}
+
+.theia-notebook-cell-sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
+.theia-notebook-code-cell-execution-order {
+  height: 35px;
+  display: block;
+  font-family: var(--monaco-monospace-font);
+  font-size: 10px;
+  opacity: 0.7;
+  text-align: center;
+  white-space: pre;
+  padding: 5px 0;
 }
 
 .theia-notebook-cell-toolbar-item {
@@ -157,11 +174,6 @@
 .theia-notebook-cell-with-sidebar {
   display: flex;
   flex-direction: row;
-}
-
-.theia-notebook-cell-sidebar {
-  display: flex;
-  flex-direction: column;
 }
 
 .theia-notebook-main-container {
