disabling clear all outputs command in notebook toolbar when no outputs are available
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/src/browser/style/index.css
+++ b/packages/notebook/src/browser/style/index.css
@@ -213,8 +213,9 @@
   cursor: pointer;
 }
 
-.theia-notebook-main-toolbar-item:hover {
-  background-color: var(--theia-toolbar-hoverBackground);
+.theia-notebook-main-toolbar-item.theia-mod-disabled:hover {
+  background-color: transparent;
+  cursor: default;
 }
 
 .theia-notebook-main-toolbar-item-text {
