added output collapsed message
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/src/browser/style/index.css
+++ b/packages/notebook/src/browser/style/index.css
@@ -266,3 +266,12 @@
   background-color: var(--theia-notebook-focusedCellBorder);
   width: 100%;
 }
+
+.theia-notebook-collapsed-output {
+  padding: 4px 8px;
+  color: var(--theia-foreground);
+  margin-left: 30px;
+  font-size: 14px;
+  line-height: 22px;
+  opacity: 0.7;
+}
