working notebook cell language select Also fixing notebook enter in notebook cell editors
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/notebook/src/browser/style/index.css
+++ b/packages/notebook/src/browser/style/index.css
@@ -109,8 +109,13 @@
   flex-grow: 1;
 }
 
-.notebook-cell-status-right {
-  margin: 0 5px;
+.notebook-cell-language-label {
+  padding: 0 5px;
+}
+
+.notebook-cell-language-label:hover {
+  cursor: pointer;
+  background-color: var(--theia-toolbar-hoverBackground);
 }
 
 .notebook-cell-status-item {
