Support moving the AI Chat view into a separate window (#148)
- don't bind the widgets as singletons because they must be
  recreated after disposal
- Add an action to extract the chat view to a separate window
- Include AI Chat UI CSS in the secondary window
- avoid PerfectScroll rails

Note that this does result in odd
behaviour when opening the view again
in the main window, yanking it out of\the separate window, as then closing
the separate window closes the view
that is now in the main window. This
boils down to a known issue in the
general support for secondary windows.

Co-authored-by: Remi Schnekenburger <rschnekenburger@eclipsesource.com>

--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -7,6 +7,11 @@
     flex: 1;
 }
 
+.chat-input-widget>.ps__rail-x,
+.chat-input-widget>.ps__rail-y {
+    display: none !important;
+}
+
 .theia-ChatNode {
     cursor: default;
     display: flex;
@@ -53,7 +58,9 @@ div:last-child>.theia-ChatNode {
 }
 
 @keyframes dots {
-    0%, 20% {
+
+    0%,
+    20% {
         content: '';
     }
 
@@ -65,7 +72,8 @@ div:last-child>.theia-ChatNode {
         content: '..';
     }
 
-    80%, 100% {
+    80%,
+    100% {
         content: '...';
     }
 }
