feat: add error handling including a special part

--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -208,3 +208,10 @@ div:last-child>.theia-ChatNode {
         transform: rotate(360deg);
     }
 }
+
+.theia-ChatPart-Error {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+    color: var(--theia-errorForeground);
+}
