feat: enhance AI Feature Management and UI/UX Improvements
- Disable/enable view contributions base on master setting
- Show experimental feature status information
- Introduce Theia AI banner and disabled feature documentation
- Align settings to have one AI Feature setting category
  - Adapt all existing AI settings to adapt to the new category
- Introduce a simple message in the AI chat view if the main AI feature setting is disabled

Co-authored-by: Nina Doschek <ndoschek@eclipsesource.com>
Co-authored-by: Tobias Ortmayr <tortmayr@eclipsesource.com>
Co-authored-by: Stefan Dirix <sdirix@eclipsesource.com>

--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -260,3 +260,35 @@ div:last-child > .theia-ChatNode {
   gap: 0.5em;
   color: var(--theia-errorForeground);
 }
+
+
+.section-header {
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.section-title {
+    font-weight: bold;
+    font-size: 14px;
+    margin: 20px 0px;
+}
+
+.disable-message {
+    font-size: 12px;
+    line-height: 1.6;
+    padding: 15px;
+}
+
+.section-content p {
+    margin: 10px 0;
+}
+
+.section-content a {
+    cursor: pointer;
+}
+
+.section-content strong {
+    font-weight: bold;
+}
+
