--- a/packages/ai-chat-ui/src/browser/style/index.css
+++ b/packages/ai-chat-ui/src/browser/style/index.css
@@ -31,12 +31,13 @@ div:last-child > .theia-ChatNode {
 .theia-ChatNodeHeader {
   align-items: center;
   display: flex;
+  justify-content: space-between;
+  height: 24px;
   gap: 8px;
   width: 100%;
 }
 
 .theia-ChatNodeHeader .theia-AgentAvatar {
-  display: flex;
   pointer-events: none;
   user-select: none;
   font-size: 20px;
@@ -89,6 +90,24 @@ div:last-child > .theia-ChatNode {
 
 .theia-AgentLabel {
   font-weight: 600;
+}
+
+.theia-ChatNode .theia-ChatNodeToolbar {
+  margin-left: auto;
+  line-height: 18px;
+}
+.theia-ChatNodeToolbar .theia-ChatNodeToolbarAction {
+  display: none;
+  align-items: center;
+  padding: 4px;
+  border-radius: 5px;
+}
+.theia-ChatNode:hover .theia-ChatNodeToolbar .theia-ChatNodeToolbarAction {
+  display: inline-block;
+}
+.theia-ChatNodeToolbar .theia-ChatNodeToolbarAction:hover {
+  cursor: pointer;
+  background-color: var(--theia-toolbar-hoverBackground);
 }
 
 .theia-ChatNode .rendered-markdown p {
