Add "overflow: hidden" to preferences editor widget
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/preferences/src/browser/style/index.css
+++ b/packages/preferences/src/browser/style/index.css
@@ -158,6 +158,7 @@
 
 .theia-settings-container .preferences-editor-widget {
   grid-area: editor;
+  overflow: hidden;
 }
 
 .theia-settings-container .preferences-editor-widget.full-pane {
